# barcelona-de-indias-time-serie

./: README.md  main.py  pyproject.toml  v1_zona_lag.ipynb
