[project]
name = "barcelona-de-indias-time-serie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ee>=0.2",
    "geemap>=0.37.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
